Datepicker Max Current date Fix

--- a/src/app/layout/charts/charts.component.html
+++ b/src/app/layout/charts/charts.component.html
@@ -23,6 +23,8 @@
                                 placeholder="{{kpilist[kpi.kpi_name][kpi.kpi_name+'-'+chart]._selectedvalue.value | lowercase}}"
                                 [(ngModel)]="kpilist[kpi.kpi_name][kpi.kpi_name+'-'+chart]._mon"
                                 [required]="true"
+                                (onOpen)="setGlobalMaxDate()"
+                                [max]="MAX_DATE"
                                 type="month"
                                 startView="month"
                                 format="MMM y"
@@ -36,6 +38,8 @@
                                 placeholder="Start"
                                 [(ngModel)]="kpilist[kpi.kpi_name][kpi.kpi_name+'-'+chart]._sDate"
                                 [required]="true"
+                                [max]="MAX_DATE"
+                                (onOpen)="setGlobalMaxDate()"
                                 type="date"
                                 startView="month"
                                 format="d MMMM yy"
@@ -46,6 +50,7 @@
                             <div *ngIf="kpilist[kpi.kpi_name][kpi.kpi_name+'-'+chart]._selectedvalue && kpilist[kpi.kpi_name][kpi.kpi_name+'-'+chart]._selectedvalue.id===2">
                                 <md2-datepicker name="eDate"    
                                 placeholder="End"
+                                (onOpen)="setGlobalMaxDate()"
                                 [(ngModel)]="kpilist[kpi.kpi_name][kpi.kpi_name+'-'+chart]._eDate"
                                 [required]="true"
                                 [min]="kpilist[kpi.kpi_name][kpi.kpi_name+'-'+chart]._sDate"
