--- a/src/app/layout/charts/charts.component.html
+++ b/src/app/layout/charts/charts.component.html
@@ -78,7 +78,7 @@
                     <div id="{{kpi.kpi_name+'-'+chart}}"></div>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-info btn-sm" (click)="getSirwalaChart($event,kpi.kpi_name+'-'+chart)">Refresh</button>
+                    <button class="btn btn-info btn-sm" (click)="getNonDrilldownChart($event,kpi.kpi_name+'-'+chart)">Refresh</button>
                 </div>
             </div>
         </div>
