--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="login-page">
     <div class="row">
         <div class="col-md-4 push-md-4">
-            <img src="assets/images/logo.png" width="150px" class="user-avatar" />
-            <h1>Zast</h1>
+            <img src="assets/images/analytics.png"/>
+            <h1>Analytics</h1>
             <form name="loginForm" role="form" novalidate>
                 <div class="form-content">
                     <div class="form-group">
